--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -11,12 +11,25 @@
         android:orientation="vertical"
         tools:context=".login.login.signin.SignInFragment">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            android:text="@string/email_address"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
         <EditText
             android:id="@+id/emailF"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="15dp"
+
             android:drawableStart="@android:drawable/sym_action_email"
             android:drawablePadding="10dp"
             android:drawableTint="@android:color/darker_gray"
@@ -24,10 +37,23 @@
             android:hint="@string/email_address"
             android:inputType="textEmailAddress"
             android:padding="10dp"
-            android:textColor="@color/white"
+            android:background="@drawable/edit_text_field_white"
+            android:textColor="@color/black"
             android:textColorHint="@android:color/darker_gray"
             android:textStyle="normal"
             tools:targetApi="m" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            android:text="@string/password"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/passwordF"
@@ -42,7 +68,8 @@
             android:hint="@string/password"
             android:inputType="textPassword"
             android:padding="10dp"
-            android:textColor="@color/white"
+            android:background="@drawable/edit_text_field_white"
+            android:textColor="@color/black"
             android:textColorHint="@android:color/darker_gray"
             android:textStyle="normal"
             tools:targetApi="m" />
@@ -54,12 +81,12 @@
             android:layout_gravity="center"
             android:layout_margin="15dp"
             android:background="@drawable/login_bg_button"
-            android:backgroundTint="@android:color/darker_gray"
+            android:backgroundTint="@android:color/black"
             android:gravity="center"
             android:text="@string/sign_in"
             android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold|italic" />
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
