--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,78 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".login.LoginActivity">
 
-    <LinearLayout
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:fitsSystemWindows="true"
+        android:theme="@style/Theme.Settings.AppBarOverlay">
+
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/toolbar_layout"
+            style="@style/Widget.MaterialComponents.Toolbar.Primary"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="top"
+            android:background="@color/black"
+            android:fitsSystemWindows="true"
+            app:contentScrim="@color/black"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:title="Login"
+            app:toolbarId="@+id/toolbar">
+
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_margin="30dp"
+                android:contentDescription="@string/logo"
+                android:src="@mipmap/food_connect_logo" />
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        android:orientation="vertical">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <ImageView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_gravity="center"
-            android:layout_margin="30dp"
-            android:src="@mipmap/food_connect_logo"
-            android:contentDescription="@string/logo" />
+            android:layout_height="match_parent"
+            android:layout_marginTop="30dp"
+            android:background="@color/white"
+            android:orientation="vertical">
 
-       <!-- <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="5dp"
-            android:gravity="center"
-            android:padding="5dp"
-            android:text="@string/enter_credentials_to_continue"
-            android:textColor="@color/coolGrey"
-            android:textStyle="bold" />-->
 
-        <com.google.android.material.tabs.TabLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:elevation="12dp"
-            android:background="@color/black"
-            app:tabSelectedTextColor="@color/white"
-            app:tabTextColor="@android:color/darker_gray"
-            app:tabIndicatorFullWidth="true"
-            app:tabInlineLabel="true"
-            app:tabIndicator="@drawable/ic_tab_indicator"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            app:tabIndicatorColor="@android:color/darker_gray"
-            android:id="@+id/loginTabLayout"/>
+            <!-- <TextView
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_gravity="center"
+                 android:layout_marginStart="8dp"
+                 android:layout_marginTop="5dp"
+                 android:layout_marginEnd="8dp"
+                 android:layout_marginBottom="5dp"
+                 android:gravity="center"
+                 android:padding="5dp"
+                 android:text="@string/enter_credentials_to_continue"
+                 android:textColor="@color/coolGrey"
+                 android:textStyle="bold" />-->
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_margin="5dp"
-            android:layout_gravity="center"
-            android:id="@+id/loginViewPager"/>
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/loginTabLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:background="@color/black"
+                android:elevation="12dp"
+                app:tabIndicator="@drawable/ic_tab_indicator"
+                app:tabIndicatorColor="@android:color/darker_gray"
+                app:tabIndicatorFullWidth="true"
+                app:tabInlineLabel="true"
+                app:tabSelectedTextColor="@color/white"
+                app:tabTextColor="@android:color/darker_gray"
+                tools:ignore="SpeakableTextPresentCheck" />
 
-        <TextView
-            android:id="@+id/ForgotPassTv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="25dp"
-            android:gravity="center"
-            android:text="@string/forgot_password"
-            android:textColor="@color/white"
-            android:textStyle="bold" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="800dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:orientation="vertical">
 
-    </LinearLayout>
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/loginViewPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/ForgotPassTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="25dp"
+                android:gravity="center"
+                android:text="@string/forgot_password"
+                android:textColor="@color/white"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
     <ProgressBar
         android:id="@+id/loginPb"
@@ -80,6 +123,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="20dp"
-        android:progressTint="@color/black"/>
+        android:progressTint="@color/black" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
