--- a/app/src/main/res/layout/activity_add_new_product.xml
+++ b/app/src/main/res/layout/activity_add_new_product.xml
@@ -6,24 +6,53 @@
     android:layout_height="match_parent"
     tools:context=".pages.seller.AddNewProduct">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/addNewProductTb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        app:navigationIcon="@drawable/ic_back"
+        android:background="@color/black"
+        app:title="Add New Product"
+        app:titleTextColor="@color/white" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/addNewProductTb"
-                android:layout_width="match_parent"
+
+
+            <Button
+                android:id="@+id/productCategoryButton"
+                android:layout_width="wrap_content"
+                android:padding="10dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="top"
-                android:background="@color/black"
-                app:title="Add New Product"
-                app:titleTextColor="@color/white" />
+                android:layout_gravity="center"
+                android:layout_margin="5dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginTop="20dp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:text="@string/click_to_pick_product_category"
+                android:background="@drawable/login_bg_button"
+                android:gravity="center"
+                android:minHeight="48dp"
+                tools:ignore="SpeakableTextPresentCheck" />
 
             <TextView
+                android:id="@+id/categoryChosen"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -31,21 +60,11 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="5dp"
-                android:gravity="center_vertical"
+                android:gravity="center"
                 android:padding="10dp"
-                android:text="@string/product_category"
+                android:text="@string/hy"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
-
-            <Spinner
-                android:id="@+id/productCategorySpinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="5dp"
-                android:gravity="center"
-                android:minHeight="48dp"
-                tools:ignore="SpeakableTextPresentCheck" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -60,23 +79,24 @@
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
                     android:layout_margin="10dp"
-                    android:elevation="12dp"
                     android:background="@android:color/transparent"
+                    android:elevation="12dp"
                     android:src="@android:drawable/ic_menu_add"
                     app:tint="@color/white" />
 
                 <ImageButton
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_alignParentTop="true"
                     android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
                     android:layout_margin="10dp"
-                    android:elevation="12dp"
                     android:background="@android:color/transparent"
+                    android:elevation="12dp"
                     android:src="@android:drawable/ic_menu_close_clear_cancel"
                     app:tint="@android:color/holo_red_light" />
 
                 <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/productImagesViewPager"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_alignParentStart="true"
@@ -92,6 +112,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="20dp"
+                android:id="@+id/productNameField"
+                android:background="@drawable/login_bg_button_white"
                 android:gravity="center"
                 android:hint="@string/product_name"
                 android:minHeight="48dp" />
@@ -101,6 +123,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="20dp"
+                android:id="@+id/productDescriptionField"
+                android:background="@drawable/login_bg_button_white"
                 android:gravity="center"
                 android:hint="@string/product_description"
                 android:minHeight="48dp" />
@@ -110,9 +134,11 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="20dp"
+                android:id="@+id/productPriceField"
+                android:background="@drawable/login_bg_button_white"
                 android:gravity="center"
-                android:inputType="numberDecimal"
                 android:hint="@string/product_price"
+                android:inputType="numberDecimal"
                 android:minHeight="48dp" />
 
             <TextView
@@ -129,50 +155,56 @@
                 android:textStyle="bold" />
 
             <RadioGroup
-                android:gravity="center"
+                android:id="@+id/unitGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <RadioButton
-                    android:layout_weight="1"
+                    android:id="@+id/solid"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:text="Solid"/>
+                    android:text="@string/solid" />
 
                 <RadioButton
-                    android:layout_weight="1"
+                    android:id="@+id/liquid"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:text="Liquid"/>
+                    android:text="@string/liquid" />
 
                 <RadioButton
-                    android:layout_weight="1"
+                    android:id="@+id/gas"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:text="Gas"/>
+                    android:text="@string/gas" />
 
             </RadioGroup>
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/login_bg_button"
-                android:layout_margin="15dp"
                 android:layout_gravity="center"
+                android:layout_margin="15dp"
+                android:background="@drawable/login_bg_button"
                 android:text="Add"
                 android:textColor="@color/white"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
         </LinearLayout>
+
+
     </ScrollView>
 
-
+    </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
