--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -6,40 +6,39 @@
     android:layout_height="match_parent"
     tools:context=".pages.admin.AdminActivity">
 
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <LinearLayout
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:background="@color/black"
+                app:subtitleTextColor="@android:color/darker_gray"
+                app:title="@string/admin"
+                app:titleTextColor="@color/white" />
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/adminFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_gravity="center"
+                android:scaleType="fitXY" />
 
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:background="@color/black"
-                    android:layout_gravity="top"
-                    app:titleTextColor="@color/white"
-                    app:title="@string/admin"
-                    app:subtitleTextColor="@android:color/darker_gray"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-                <androidx.fragment.app.FragmentContainerView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:id="@+id/adminFragment"
-                    android:scaleType="fitXY"/>
-
-            </LinearLayout>
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        </LinearLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/adminNavigation"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start"/>
-
+        android:layout_gravity="start" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
