--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -17,33 +17,36 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/editProductCategory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:background="@android:color/transparent"
+                android:elevation="12dp"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                android:src="@drawable/ic_brush"
+                app:tint="@android:color/holo_red_light" />
+
             <TextView
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:gravity="center"
+                android:gravity="center_vertical"
                 android:padding="10dp"
+                android:minHeight="50dp"
                 android:text="@string/product_category"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
 
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_gravity="center_vertical"
-                android:elevation="12dp"
-                android:background="@android:color/transparent"
-                android:src="@drawable/ic_brush"
-                />
+
 
         </LinearLayout>
 
-        <Spinner
+        <androidx.appcompat.widget.AppCompatSpinner
             android:id="@+id/productCategorySpinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -67,10 +70,13 @@
             android:textColor="@color/black"
             android:textStyle="bold" />
 
-
-
-
-
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/productsRv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:padding="5dp"/>
 
     </LinearLayout>
 
