--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -39,6 +39,8 @@
         android:id="@+id/adminNavigation"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        app:menu="@menu/admin_drawer"
+        app:headerLayout="@layout/seller_header"
         android:layout_gravity="start" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
