--- a/app/src/main/res/layout/seller_header.xml
+++ b/app/src/main/res/layout/seller_header.xml
@@ -1,30 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/semiGrey"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_gravity="top"
-        android:background="@color/black"
+        android:background="@color/semiWhite"
         android:orientation="vertical">
 
-       <ImageView
-           android:src="@drawable/ic_lemon"
-           android:layout_width="100dp"
-           android:layout_height="100dp"
+       <com.makeramen.roundedimageview.RoundedImageView
+           android:id="@+id/profPicNav"
+           android:src="@drawable/ic_give_food"
+           android:layout_width="150dp"
+           android:layout_height="150dp"
+           android:padding="5dp"
+           android:scaleType="centerCrop"
            android:layout_gravity="center_vertical"
            android:layout_margin="15dp"
-           android:background="@color/browser_actions_bg_grey"/>
+           app:riv_border_color="@color/semiGrey"
+           app:riv_border_width="2dp"
+           app:riv_corner_radius="10dp"/>
 
         <TextView
+            android:id="@+id/usernameNav"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:text="Username"
             android:textSize="20sp"
             android:layout_marginStart="20dp"
@@ -32,11 +40,12 @@
             android:fontFamily="serif"/>
 
         <TextView
+            android:id="@+id/emailNav"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:text="Email Address"
             android:textSize="20sp"
             android:layout_marginStart="20dp"
