--- a/app/src/main/res/layout/activity_add_new_product.xml
+++ b/app/src/main/res/layout/activity_add_new_product.xml
@@ -57,7 +57,7 @@
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
                     android:layout_margin="10dp"
-                    android:background="@android:color/transparent"
+                    android:background="@drawable/ic_circle_button_white"
                     android:elevation="12dp"
                     android:src="@android:drawable/ic_menu_add"
                     app:tint="@color/white" />
@@ -69,7 +69,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_margin="10dp"
-                    android:background="@android:color/transparent"
+                    android:background="@drawable/ic_circle_button_red"
                     android:elevation="12dp"
                     android:src="@android:drawable/ic_menu_close_clear_cancel"
                     app:tint="@android:color/holo_red_light" />
