--- a/app/src/main/res/layout/activity_beneficiary.xml
+++ b/app/src/main/res/layout/activity_beneficiary.xml
@@ -21,11 +21,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <ImageView
+
+        <androidx.viewpager2.widget.ViewPager2
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@mipmap/food_connect_logo"
-            android:scaleType="fitXY"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/productsRv"
+            android:layout_gravity="center"
+           />
+
 
     </LinearLayout>
 
