--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -25,8 +25,8 @@
                 android:id="@+id/tutorialIndicator"
                 android:layout_width="match_parent"
                 android:layout_gravity="center"
-                app:ci_drawable_unselected="@drawable/black_dot"
-                app:ci_drawable="@drawable/purple_dot"
+                app:ci_drawable_unselected="@drawable/purple_dot"
+                app:ci_drawable="@drawable/black_dot"
                 android:layout_height="wrap_content" />
 
             <Button
