--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -20,10 +20,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
-                android:background="@color/black"
+                android:background="@color/white"
                 app:subtitleTextColor="@android:color/darker_gray"
                 app:title="@string/admin"
-                app:titleTextColor="@color/white" />
+                app:titleTextColor="@color/black" />
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/adminFragment"
