--- a/app/src/main/res/layout/product_item_buy.xml
+++ b/app/src/main/res/layout/product_item_buy.xml
@@ -1,30 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="10dp"
-    app:cardBackgroundColor="@color/black"
+    android:layout_margin="5dp"
+    app:cardBackgroundColor="@color/semiGrey"
     app:cardCornerRadius="10dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
+        app:cardBackgroundColor="@color/white"
         android:layout_margin="2dp"
         app:cardCornerRadius="10dp">
 
         <LinearLayout
+            android:padding="5dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:gravity="center"
             android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:layout_margin="15dp"
+                android:layout_height="200dp"
                 android:layout_gravity="center"
+                android:layout_margin="5dp"
                 app:cardCornerRadius="10dp">
 
                 <ImageView
@@ -36,17 +41,19 @@
 
             </androidx.cardview.widget.CardView>
 
+
             <TextView
                 android:id="@+id/productTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center_vertical"
-                android:textAllCaps="true"
                 android:padding="10dp"
                 android:text="@string/title"
+                android:textAllCaps="true"
                 android:textColor="@color/black"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:ignore="NestedWeights" />
 
             <TextView
                 android:id="@+id/productDescription"
@@ -54,32 +61,47 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center_vertical"
-                android:padding="10dp"
+                android:padding="8dp"
                 android:text="@string/description" />
+
+            <TextView
+                android:id="@+id/seller"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="sans-serif"
+                android:gravity="center_vertical"
+                android:padding="8dp"
+                android:text="@string/seller"
+                android:textColor="@android:color/holo_orange_dark"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/productPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textSize="18sp"
                 android:gravity="center_vertical"
-                android:padding="10dp"
-                android:textStyle="bold"
+                android:padding="8dp"
                 android:text="@string/product_price"
-                android:textColor="@android:color/holo_green_dark" />
+                android:textColor="@android:color/holo_green_dark"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
 
             <ImageButton
+                android:id="@+id/addToCart"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_cart"
-                android:padding="20dp"
-
+                android:layout_margin="35dp"
                 android:background="@drawable/ic_circle"
                 android:backgroundTint="@android:color/holo_orange_light"
-                android:layout_margin="35dp"
+                android:padding="20dp"
+                android:src="@drawable/ic_cart"
                 app:tint="@color/white" />
+
+
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
